--- a/FM_MyStat.Web/FM_MyStat.Web.csproj
+++ b/FM_MyStat.Web/FM_MyStat.Web.csproj
@@ -6,4 +6,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.8">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="X.PagedList.Mvc.Core" Version="8.4.7" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\FM_MyStat.Core\FM_MyStat.Core.csproj" />
+	  <ProjectReference Include="..\FM_MyStat.Infrastructure\FM_MyStat.Infrastructure.csproj" />
+	</ItemGroup>
+	
 </Project>
