Add email setting

--- a/FM_MyStat.Web/appsettings.json
+++ b/FM_MyStat.Web/appsettings.json
@@ -3,11 +3,17 @@
     "DefaultConnection": "Data Source=20.163.12.118;Initial Catalog=MyStatDB;User ID=sa;Password=Qwerty-1;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "EmailSettings": {
+    "User": "academystep@ukr.net",
+    "Password": "512qTEw30HytbSeE",
+    "SMTP": "smtp.ukr.net",
+    "PORT": 465
+  },
+  "AllowedHosts": "*"
+}
