--- a/FM_MyStat.Infrastructure/FM_MyStat.Infrastructure.csproj
+++ b/FM_MyStat.Infrastructure/FM_MyStat.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -18,6 +18,10 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\FM_MyStat.Core\FM_MyStat.Core.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
 	</ItemGroup>
 	
 </Project>
