--- a/FM_MyStat.Core/FM_MyStat.Core.csproj
+++ b/FM_MyStat.Core/FM_MyStat.Core.csproj
@@ -15,4 +15,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.8" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Validation\" />
+	</ItemGroup>
+
 </Project>
