--- a/FM_MyStat.Infrastructure/FM_MyStat.Infrastructure.csproj
+++ b/FM_MyStat.Infrastructure/FM_MyStat.Infrastructure.csproj
@@ -19,5 +19,9 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\FM_MyStat.Core\FM_MyStat.Core.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
 	
 </Project>
