--- a/FM_MyStat.Core/FM_MyStat.Core.csproj
+++ b/FM_MyStat.Core/FM_MyStat.Core.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="AutoMappers\AutoMapperLessons.cs~RF2f16f650.TMP" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Ardalis.Specification" Version="7.0.0" />
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
