Reset password done

--- a/FM_MyStat.Web/appsettings.json
+++ b/FM_MyStat.Web/appsettings.json
@@ -14,5 +14,8 @@
     "SMTP": "smtp.ukr.net",
     "PORT": 465
   },
+  "HostSettings": {
+    "URL": "https://localhost:5001"
+  },
   "AllowedHosts": "*"
 }
