Added homework files

--- a/FM_MyStat.Web/FM_MyStat.Web.csproj
+++ b/FM_MyStat.Web/FM_MyStat.Web.csproj
@@ -25,5 +25,9 @@
 	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 	  </Content>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="wwwroot\Filepath\homework\" />
+	</ItemGroup>
 	
 </Project>
