--- a/FM_MyStat.Web/appsettings.json
+++ b/FM_MyStat.Web/appsettings.json
@@ -17,5 +17,8 @@
   "HostSettings": {
     "URL": "https://localhost:5001"
   },
+  "FileSettings": {
+    "FilePath": "/Filepath/homework"
+  },
   "AllowedHosts": "*"
 }
