Added homework files

--- a/FM_MyStat.Web/appsettings.json
+++ b/FM_MyStat.Web/appsettings.json
@@ -14,6 +14,9 @@
     "SMTP": "smtp.ukr.net",
     "PORT": 465
   },
+  "FileSettings": {
+    "FilePath": "/Filepath/homework"
+  },
   "HostSettings": {
     "URL": "https://localhost:5001"
   },
