Removal of impurities of the student's group

--- a/FM_MyStat.Web/FM_MyStat.Web.csproj
+++ b/FM_MyStat.Web/FM_MyStat.Web.csproj
@@ -28,6 +28,7 @@
 
 	<ItemGroup>
 	  <Folder Include="wwwroot\Filepath\homework\" />
+	  <Folder Include="wwwroot\Filepath\homeworkDone\" />
 	</ItemGroup>
 	
 </Project>
