--- a/FM_MyStat.Web/appsettings.json
+++ b/FM_MyStat.Web/appsettings.json
@@ -17,6 +17,9 @@
   "FileSettings": {
     "FilePath": "/Filepath/homework"
   },
+  "FileSettings2": {
+    "FilePath": "/Filepath/homeworkDone"
+  },
   "HostSettings": {
     "URL": "https://localhost:5001"
   },
