Preparing to upload the project to the server

--- a/FM_MyStat.Web/appsettings.json
+++ b/FM_MyStat.Web/appsettings.json
@@ -21,7 +21,7 @@
     "FilePath": "/Filepath/homeworkDone"
   },
   "HostSettings": {
-    "URL": "https://localhost:5001"
+    "URL": "20.163.12.118"
   },
   "AllowedHosts": "*"
 }
