--- a/FM_MyStat.Web/appsettings.json
+++ b/FM_MyStat.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=16.171.23.80;Database=fmmystat;Port=5022;Username=root;Password=Qwerty-1"
+    "DefaultConnection": "Host=16.171.23.80;Database=pfmmystat1;Port=5022;Username=root;Password=Qwerty-1"
   },
   "Logging": {
     "LogLevel": {
