--- a/FM_MyStat.Web/appsettings.json
+++ b/FM_MyStat.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=20.163.12.118;Database=fmmystat;Port=5022;Username=root;Password=Qwerty-1"
+    "DefaultConnection": "Data Source=20.163.12.118;Initial Catalog=MyStatDB;User ID=sa;Password=Qwerty-1;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
