Show the student's passed exams

--- a/FM_MyStat.Web/appsettings.json
+++ b/FM_MyStat.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=20.163.12.118;Initial Catalog=MyStatDB;User ID=sa;Password=Qwerty-1;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=DESKTOP-2SQGFV4\\SQLEXPRESS;Initial Catalog=MyStatDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
